Products.CMFCore Changelog
==========================

2.2.0 (unreleased)
------------------

- Removed superGetAttr fallback from SkinnableObjectManager. None of its base
  classes have a `__getattr__` method anymore.

- PortalObject: Removed backwards compatibility code in getSiteManager.
  Please use CMFDefault's upgrade steps for upgrading old CMF sites.

- Fixed compatibility with non-string exceptions on Zope trunk.

- Added remove support to GenericSetup types tool exportimport handler.

- FiveActionsTool: Removed the tool and all functionality for bridging
  between Zope 3-style menu items and CMF actions. The CMF has been going
  a different route for a long time and the code is unused and 
  unmaintained.

- Actions: Added deprecation warnings to the ZMI actions tab and 
  most listActions methods where old-style actions are found 
  asking developers to move to new-style actions instead. These 
  warnings allow us to remove old-style actions code by version 2.4.

- Discussion tool: Removed the listActions method that would return 
  a hardcoded Reply action. This action has been handled by the
  Actions tool itself for a while now, and the Discussions tool was 
  not set as an action provider anymore.

- actions tool export/import: The actions tool export/import mechanism 
  is no longer attempting to handle actions stored on tools other than
  itself. Other tools are themselves responsible for their actions.
  The importer has been fixed to add all action providers to the actions 
  tool, not just a select list of providers we know about.
  (https://bugs.launchpad.net/zope-cmf/+bug/177675)

- tool interfaces: Replace non-existing IMember interface with the
  correct IMemberData.

- CatalogTool: If proxy roles are set on a script that uses the catalog
  and those proxy roles have been unset using the ZMI, which results
  in an empty tuple as proxy roles, then the catalog would not correctly
  determine what the current user is allowed to see.